--- a/config/boards/shields/moNa2/moNa2_R.conf
+++ b/config/boards/shields/moNa2/moNa2_R.conf
@@ -14,7 +14,8 @@ CONFIG_PMW3610_CPI_DIVIDOR=1
 CONFIG_PMW3610_ORIENTATION_180=y
 # CONFIG_PMW3610_SNIPE_CPI=800
 # CONFIG_PMW3610_SNIPE_CPI_DIVIDOR=4
-CONFIG_PMW3610_SCROLL_TICK=20          # スクロールレイヤーの感度を調整する。20前後が一般的。大きいほど鈍くなる
+CONFIG_PMW3610_SCROLL_TICK=40          
+# スクロールレイヤーの感度を調整する。20前後が一般的。大きいほど鈍くなる->CONFIG_PMW3610_SCROLL_TICK
 CONFIG_PMW3610_INVERT_X=n
 CONFIG_PMW3610_INVERT_SCROLL_X=n
 CONFIG_PMW3610_INVERT_SCROLL_Y=y
