--- a/config/west.yml
+++ b/config/west.yml
@@ -4,6 +4,8 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: sayu-hub
       url-base: https://github.com/sayu-hub
+    - name: brutalistEQ
+      url-base: https://github.com/brutalistEQ
     - name: caksoylar  # <-- new entry
       url-base: https://github.com/caksoylar  
   projects:
@@ -12,7 +14,7 @@ manifest:
       revision: main
       import: app/west.yml
     - name: zmk-pmw3610-driver
-      remote: sayu-hub
+      remote: brutalistEQ
       revision: main
     - name: zmk-rgbled-widget  # <-- new entry
       remote: caksoylar
